# router

./: .gitignore  .php-cs-fixer.dist.php  README.md  composer.json  phpstan.neon  phpunit.xml
rust/: Cargo.toml  build.sh
rust/src/: lib.rs
src/: ArrayRouteDefinition.php  EARouterOptimizations.php  RingBufferCache.php  Route.php  RouteMatch.php  RouteNotFoundException.php  Router.php  RouterException.php
src/Contracts/: CacheInterface.php
src/Engines/: RustFFIEngine.php
tests/: MockRequest.php
tests/Concurrency/: RouterConcurrencyTest.php
tests/Integration/: RouterIntegrationTest.php  RouterRealWorldTest.php
tests/Performance/: EARouterPerformanceTest.php  RouterPerformanceTest.php
tests/Unit/: EARouterFeaturesTest.php  QueryStringTest.php  RouterBasicTest.php  RouterCoreTest.php  RouterTest.php
